# caturday

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  reddit.rs  set_cont.rs  wait.rs
