[package]
name = "caturday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
ureq = "2.4.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
